@@ -133,6 +133,10 @@ def stage_maven_artifacts_in_maven_central(new_checker_version):
                             DATAFLOW_SOURCE_JAR, DATAFLOW_JAVADOC_JAR,
                             pgp_user, pgp_passphrase)
 
+    mvn_sign_and_deploy_all(SONATYPE_OSS_URL, SONATYPE_STAGING_REPO_ID, TESTLIB_BINARY_RELEASE_POM, TESTLIB_BINARY,
+                            TESTLIB_SOURCE_JAR, TESTLIB_JAVADOC_JAR,
+                            pgp_user, pgp_passphrase)
+
     delete_path(mvn_dist)
 
 def is_file_empty(filename):
