@@ -1,0 +1,83 @@
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
+
+    <name>Checker Framework Testing Library</name>
+    <url>https://checkerframework.org</url>
+    <description>
+        Testlib is a collection of utility classes for testing checkers that use the Checker Framework.
+    </description>
+
+    <groupId>org.checkerframework</groupId>
+    <artifactId>testlib</artifactId>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License, version 2 (GPL2), with the classpath exception</name>
+            <url>http://www.gnu.org/software/classpath/license.html</url>
+            <distribution>repo</distribution>
+        </license>
+
+        <license>
+            <name>The MIT License</name>
+            <url>http://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>javacutil</artifactId>
+            <version><!-- checker-framework-version -->2.5.0<!-- /checker-framework-version --></version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+
+    <!-- The comments in the version number are used to do a text substitution. Don't remove them.
+         See checker-framework/bin/poms/updateVersion.sh -->
+    <version><!-- checker-framework-version -->2.5.0<!-- /checker-framework-version --></version>
+
+    <scm>
+        <url>https://github.com/typetools/checker-framework.git</url>
+        <connection>https://github.com/typetools/checker-framework.git</connection>
+    </scm>
+
+    <developers>
+
+        <developer>
+            <id>Michael Ernst &lt;mernst@cs.washington.edu&gt;</id>
+            <name>Michael Ernst</name>
+            <email>mernst@cs.washington.edu</email>
+            <url>http://homes.cs.washington.edu/~mernst/</url>
+            <organization>University of Washington</organization>
+            <organizationUrl>https://www.cs.washington.edu/</organizationUrl>
+        </developer>
+
+        <developer>
+            <id>wmdietl</id>
+            <name>Werner M. Dietl</name>
+            <email>wdietl@uwaterloo.ca</email>
+            <organization>University of Waterloo</organization>
+            <organizationUrl>http://uwaterloo.ca/</organizationUrl>
+        </developer>
+
+        <developer>
+            <id>Suzanne Millstein  &lt;smillst@cs.washington.edu&gt;</id>
+            <name>Suzanne Millstein</name>
+            <email>smillst@cs.washington.edu</email>
+            <organization>University of Washington PLSE Group</organization>
+            <organizationUrl>https://www.cs.washington.edu/research/plse/</organizationUrl>
+        </developer>
+
+    </developers>
+
+</project>
